# DERP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
core/: ARMv6MCore.cpp  ARMv6MCore.h  CMakeLists.txt  ClockTarget.h  Clocks.cpp  Clocks.h  DMA.cpp  DMA.h  FIFO.h  GDBServer.cpp  GDBServer.h  GPIO.cpp  GPIO.h  I2C.cpp  I2C.h  Logging.cpp  Logging.h  MemoryBus.cpp  MemoryBus.h  PIO.cpp  PIO.h  PWM.cpp  PWM.h  SUMPServer.cpp  SUMPServer.h  Timer.cpp  Timer.h  UART.cpp  UART.h  USB.cpp  USB.h  Watchdog.cpp  Watchdog.h  pico-sdk-stub.cmake
core/compiler/: ARMv6MRecompiler.cpp  ARMv6MRecompiler.h  RecompilerGeneric.cpp  RecompilerGeneric.h  X86Builder.cpp  X86Builder.h  X86Target.cpp  X86Target.h
core/hardware/: address_mapped.h
minsdl/: CMakeLists.txt  Main.cpp  Main.h
minsdl/board/: Board.h  Interstate75.cpp  Interstate75.h  Pico.h  PicoSystem.cpp  PicoSystem.h  PicoVision.cpp  PicoVision.h  Tufty2040.cpp  Tufty2040.h
usbip-server/: CMakeLists.txt  protocol.h  usbip.c  usbip.h
